src/test/ui/issues/issue-17718-const-bad-values.stderr
error[E0017]: references in constants may only refer to immutable values
  --> $DIR/issue-17718-const-bad-values.rs:1:34
   |
LL | const C1: &'static mut [usize] = &mut [];
   |                                  ^^^^^^^ constants require immutable values

error[E0017]: references in constants may only refer to immutable values
  --> $DIR/issue-17718-const-bad-values.rs:5:41
   |
LL | const C2: &'static mut usize = unsafe { &mut S };
   |                                         ^^^^^^ constants require immutable values

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0017`.
